:bug: Add z-index so 'overlay toggle' doesn't get hidden

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ button {
   position: absolute;
   text-shadow: 1px 1px 1px white;
   top: 2px;
+  z-index: 1;
 }
 
 img {
